--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -18,6 +18,7 @@
             <div class="span12">
                 <div class="widget wred">
                 <div class="widget-head">
+                  All Playmotrade Stores
                   <div class="clearfix"></div>
                 </div>
                   <div class="widget-content">
