--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,6 +17,7 @@
             <div class="span12">
               <div class="widget worange">
                 <div class="widget-head">
+                  All Active Members
                   <div class="clearfix"></div>
                 </div>
                   <div class="widget-content">
