--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,142 +1,115 @@
 <% provide(:title, "Home") %>
 <div class="content">
-  <%= render "shared/sidebar" %>
-  	<div class="mainbar">
-	    <div class="page-head">
-	      <h2 class="pull-left"><%= "Environment: #{Rails.env} | Subdomain: #{@subdomain}" %></h2>
-        <div class="clearfix"></div>
-	    </div>
-	    <div class="matter">
-        <div class="container-fluid">
-          <% if flash[:notice].present? %>
-            <div class="alert alert-info">
-                <%= flash[:notice] %>
-            </div>
-          <% end %>
-          <div class="row-fluid">
-            <div class="span4">
-              <div class="widget wred">
-                <div class="widget-head">
-                  <div class="pull-left">BUY</div>
-                  <div class="clearfix"></div>
-                </div>
-               <div class="widget-content">
-                  <ul class="activity">
-                    <li>
-                      <i class="icon-envelope-alt red"></i> <strong>Ashok</strong> Mailed you on 3/12/2032
-                    </li>
-                    <li>
-                      <i class="icon-share violet"></i> <strong>Go to america</strong> Shared by <strong>Ravi Kumar</strong>
-                    </li>
-                    <li>
-                      <i class="icon-signin green"></i> <strong>Admin</strong> Signed in on 2/4/2012
-                    </li>
-                    <li>
-                      <i class="icon-money lightblue"></i> <strong>Babu Kumar</strong> made $5000 today.
-                    </li>
-                    <li>
-                      <i class="icon-upload-alt blue"></i> <strong>Font Asesome Mp3</strong> got uploaded by <strong>Admin</strong>.
-                    </li>
-                    <li>
-                      <i class="icon-user ornage"></i> <strong>Kumarasamy</strong> joined the site on 3/5/2012.
-                    </li>
-                    <li>
-                      <i class="icon-bookmark green"></i> You Bootmarked the site <strong>Google</strong>.
-                    </li>
-                    <li>
-                      <i class="icon-plus red"></i> <strong>Admin</strong> added the article <strong>Why not now?</strong>.
-                    </li>
-                  </ul>
-                </div>
-                <div class="widget-foot">
-                  <button class="btn pull-right btn-danger">Clear All</button>
-                  <div class="clearfix"></div>
-                </div>
-              </div>
-            </div>
-            <div class="span4">
-              <div class="widget wviolet">
-                <div class="widget-head">
-                  <div class="pull-left">SELL</div>
-                  <div class="clearfix"></div>
-                </div>
-                <div class="widget-content">
-                  <ul class="activity">
-                    <li>
-                      <i class="icon-envelope-alt red"></i> <strong>Ashok</strong> Mailed you on 3/12/2032
-                    </li>
-                    <li>
-                      <i class="icon-share violet"></i> <strong>Go to america</strong> Shared by <strong>Ravi Kumar</strong>
-                    </li>
-                    <li>
-                      <i class="icon-signin green"></i> <strong>Admin</strong> Signed in on 2/4/2012
-                    </li>
-                    <li>
-                      <i class="icon-money lightblue"></i> <strong>Babu Kumar</strong> made $5000 today.
-                    </li>
-                    <li>
-                      <i class="icon-upload-alt blue"></i> <strong>Font Asesome Mp3</strong> got uploaded by <strong>Admin</strong>.
-                    </li>
-                    <li>
-                      <i class="icon-user ornage"></i> <strong>Kumarasamy</strong> joined the site on 3/5/2012.
-                    </li>
-                    <li>
-                      <i class="icon-bookmark green"></i> You Bootmarked the site <strong>Google</strong>.
-                    </li>
-                    <li>
-                      <i class="icon-plus red"></i> <strong>Admin</strong> added the article <strong>Why not now?</strong>.
-                    </li>
-                  </ul>
-                </div>
-                <div class="widget-foot">
-                  <button class="btn pull-right btn-danger">Clear All</button>
-                  <div class="clearfix"></div>
-                </div>
-              </div>
-            </div>
-            <div class="span4">
-              <div class="widget wgreen">
-                <div class="widget-head">
-                  <div class="pull-left">TRADE</div>
-                  <div class="clearfix"></div>
-                </div>
-                <div class="widget-content">
-                  <ul class="activity">
-                    <li>
-                      <i class="icon-envelope-alt red"></i> <strong>Ashok</strong> Mailed you on 3/12/2032
-                    </li>
-                    <li>
-                      <i class="icon-share violet"></i> <strong>Go to america</strong> Shared by <strong>Ravi Kumar</strong>
-                    </li>
-                    <li>
-                      <i class="icon-signin green"></i> <strong>Admin</strong> Signed in on 2/4/2012
-                    </li>
-                    <li>
-                      <i class="icon-money lightblue"></i> <strong>Babu Kumar</strong> made $5000 today.
-                    </li>
-                    <li>
-                      <i class="icon-upload-alt blue"></i> <strong>Font Asesome Mp3</strong> got uploaded by <strong>Admin</strong>.
-                    </li>
-                    <li>
-                      <i class="icon-user ornage"></i> <strong>Kumarasamy</strong> joined the site on 3/5/2012.
-                    </li>
-                    <li>
-                      <i class="icon-bookmark green"></i> You Bootmarked the site <strong>Google</strong>.
-                    </li>
-                    <li>
-                      <i class="icon-plus red"></i> <strong>Admin</strong> added the article <strong>Why not now?</strong>.
-                    </li>
-                  </ul>
-                </div>
-                <div class="widget-foot">
-                  <button class="btn pull-right btn-danger">Clear All</button>
-                  <div class="clearfix"></div>
-                </div>
-              </div>
+  <div class="home container-fluid">
+    <div class="row-fluid">
+
+      <div class="span12">
+        <div class="widget worange">
+
+         <div class="widget-content">
+          <div class="clearfix"></div>
+         </div>
+         <div class="widget-foot">
+          <div class="clearfix"></div>
+         </div>
+        </div>
+      </div>
+    </div>
+    <div class="row-fluid">
+      <div class="span4">
+        <div class="widget wred">
+          <div class="widget-head">
+            <div class="pull-left">BUY</div>
+            <div class="clearfix"></div>
+          </div>
+         <div class="widget-content">
+            <img src="img/home-3.jpg" alt="" width="100%"/>
+            <div class="sidebar sidebar-right">
+              <ul class="navi">
+               <li class="ngrey">
+                  <a href="#addToWishlist" data-toggle="modal">
+                    <i class='icon icon-bookmark'></i>Add To Wishlist
+                    <span class="pull-right"><i class="icon-angle-right"></i></span>
+                  </a>
+                </li>
+                <li class="ngrey">
+                  <a href="#addToWishlist" data-toggle="modal">
+                    <i class='icon icon-bookmark'></i>Add To Wishlist
+                    <span class="pull-right"><i class="icon-angle-right"></i></span>
+                  </a>
+                </li>
+              </ul>
             </div>
           </div>
+          <div class="widget-foot">
+            <div class="clearfix"></div>
+          </div>
         </div>
-		  </div>
+      </div>
+      <div class="span4">
+        <div class="widget wviolet">
+          <div class="widget-head">
+            <div class="pull-left">SELL</div>
+            <div class="clearfix"></div>
+          </div>
+          <div class="widget-content">
+           <img src="img/home-1.jpg" alt="" width="100%"/>
+            <div class="sidebar sidebar-right">
+              <ul class="navi">
+               <li class="ngrey">
+                  <a href="#addToWishlist" data-toggle="modal">
+                    <i class='icon icon-bookmark'></i>Add To Wishlist
+                    <span class="pull-right"><i class="icon-angle-right"></i></span>
+                  </a>
+                </li>
+                <li class="ngrey">
+                  <a href="#addToWishlist" data-toggle="modal">
+                    <i class='icon icon-bookmark'></i>Add To Wishlist
+                    <span class="pull-right"><i class="icon-angle-right"></i></span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="widget-foot">
+            <div class="clearfix"></div>
+          </div>
+        </div>
+      </div>
+      <div class="span4">
+        <div class="widget wgreen">
+          <div class="widget-head">
+            <div class="pull-left">TRADE</div>
+            <div class="clearfix"></div>
+          </div>
+          <div class="widget-content">
+            <img src="img/home-2.jpg" alt="" width="100%"/>
+            <div class="sidebar sidebar-right">
+              <ul class="navi">
+               <li class="ngrey">
+                  <a href="#addToWishlist" data-toggle="modal">
+                    <i class='icon icon-bookmark'></i>Add To Wishlist
+                    <span class="pull-right"><i class="icon-angle-right"></i></span>
+                  </a>
+                </li>
+                <li class="ngrey">
+                  <a href="#addToWishlist" data-toggle="modal">
+                    <i class='icon icon-bookmark'></i>Add To Wishlist
+                    <span class="pull-right"><i class="icon-angle-right"></i></span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="widget-foot">
+            <div class="clearfix"></div>
+          </div>
+        </div>
+      </div>
     </div>
-   <div class="clearfix"></div>
+
+  </div>
+  <div class="clearfix"></div>
+
 </div>
+
