--- a/app/views/shared/_main_menu.html.erb
+++ b/app/views/shared/_main_menu.html.erb
@@ -1,5 +1,5 @@
-<div class="navbar navbar-fixed-top navbar-inverse">
-  <div class="navbar-inner">
+<div class="navbar navbar-inverse">
+  <div class="navbar-inner no-border-navbar">
     <div class="container">
       <a class="btn btn-navbar mobile-btn-bar" data-toggle="collapse" data-target=".nav-collapse">
         <span class="icon-bar"></span>
