Footer addition and home page rework

--- a/app/views/catalog_parts/show.html.erb
+++ b/app/views/catalog_parts/show.html.erb
@@ -73,6 +73,7 @@
       </div>
     </div>
    <div class="clearfix"></div>
+   <%= render 'shared/footer' %>
 </div>
 
 <% if can? :manage, current_user.try(:store) %>
