--- a/app/views/stores/edit.html.erb
+++ b/app/views/stores/edit.html.erb
@@ -105,6 +105,7 @@
       </div>
     </div>
    <div class="clearfix"></div>
+   <%= render 'shared/footer' %>
 </div>
 <% content_for :script_files do %>
   <%= tinymce_assets %>
