--- a/app/views/stores/new.html.erb
+++ b/app/views/stores/new.html.erb
@@ -103,6 +103,7 @@
     <% end %>
     </div>
    <div class="clearfix"></div>
+   <%= render 'shared/footer' %>
 </div>
 <% content_for :script_files do %>
   <%= tinymce_assets %>
