--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -603,6 +603,10 @@ form label{
 	color: rgb(102, 102, 102) !important;
 }
 
+.sidebar-footer{
+  width: 100% !important;
+}
+
 .sidebar hr{
 	border-bottom: 1px solid #333 !important;
 }
@@ -645,7 +649,7 @@ form label{
   background-color: #111;
 }
 
-.sidebar-right .navi > li > a{
+.sidebar-right .navi > li > a {
   color: rgb(102, 102, 102);
   background-color: #FFF;
   border-bottom: 1px solid #ccc;
@@ -659,6 +663,15 @@ form label{
 
 .sidebar-right .navi > li > a:hover, .sidebar-right .navi > li.open > a {
   border-bottom: 1px solid #ddd;
+  color: #000;
+}
+
+.sidebar-footer .navi > li > a {
+  font-size:12px;
+}
+
+.sidebar-footer .navi > li > a:hover{
+  border-bottom: 1px solid #222;
   color: #000;
 }
 
@@ -852,12 +865,12 @@ form label{
 	margin-right: 0px;
 	width: auto;
 	background:#fff;
-	min-height: 900px;
+	min-height: 600px;
 }
 
 .mainbar .container{
 	width: 100%;
-	padding: 0px !important
+	padding: 0px !important;
 }
 
 /* Home */
@@ -871,7 +884,15 @@ form label{
 
 .home .container{
   width: 100%;
-  padding: 0px !important
+  padding: 0px !important;
+}
+
+.home-box{
+  margin-top:30px !important;
+}
+
+.home-content{
+  margin-top:-20px !important;
 }
 
 /* Pagination*/
@@ -1494,171 +1515,15 @@ border:1px solid #eee;
 .admin-form form{
 	padding: 10px 0px;
 }
-/* Responsive */
 
-@media (max-width: 480px){
-	.mainbar .page-head h2{
-		float: none;
-	}
-	.mainbar .bread-crumb{
-		float: none;
-		margin-top: 10px;
-	}
-	.col-left{
-		width: 100%;
-		float: none;
-		margin-right: none;
-	}
-	.col-right{
-		width: 100%;
-		float: none;
-	}
-	.fc-button-month, .fc-button-agendaWeek, .fc-button-agendaDay {
-		display: none;
-	}
+/* Footer */
 
-	.navbar .brand img{
-  	width: 75% !important;
-  }
+.footer{
+  color:#fff !important;
+  padding:20px;
 }
+.footer .right-container{
+  position:relative;
+  margin-left:210px;
 
-@media (max-width: 767px){
-	body{
-		margin: 0 auto;
-	}
-	body .container{
-		width: 95%;
-		padding-left: 2.5%;
-		padding-right: 2.5%;
-	}
-	.content{
-		margin-left: -20px;
-		margin-right: -20px;
-	}
-	.mainbar .matter{
-		padding-left: 20px;
-		padding-right: 20px;
-	}
-	.form-inline button{
-   		margin-left:0px;
-   	}
-	.navbar,.navbar-inner{
-		margin-top: 0px !important;
-		margin-bottom: 0px !important;
-	}
-	.nav-collapse .dropdown-big .dropdown-menu{
-		color: #bbb !important;
-	}
-	.nav-collapse .dropdown-big .dropdown-menu a{
-		color: #ccc !important;
-		padding-left: 0px !important;
-		padding-right: 0px !important;
-	}
-	.nav-collapse .dropdown-big .dropdown-menu a:hover{
-		color: #aaa !important;
-	}
-	.nav-collapse .dropdown-big .dropdown-menu h5{
-		color: #eee !important;
-	}
-	.nav-collapse .dropdown-menu{
-		padding: 10px 10px !important;
-	}
-	.nav-collapse .dropdown-menu a {
-		color: #fff !important;
-	}
-	.nav-collapse .dropdown-menu a:hover{
-		background:transparent !important;
-	}
-	.nav-collapse .dropdown-menu hr{
-		border-top: 0px solid #eee;
-		border-bottom: 1px solid #333;
-	}
-	.sidebar{
-		float: none;
-		width: 100%;
-	}
-	.sidebar .sidebar-dropdown{
-		display: block;
-	}
-	.sidebar .sidebar-inner{
-		display: none;
-	}
-	.sidebar .sidebar-widget{
-		text-align: center;
-	}
-	.mainbar{
-		margin: 0px;
-		float: none;
-	}
-	.today-datas{
-		text-align: center;
-	}
-	.slide-box{
-		display: none;
-	}
 }
-
-@media (min-width: 768px) and (max-width: 979px){
-	.form{
-		margin: 0px !important;
-	}
-	form .control-group{
-		margin:0px !important;
-	}
-	form .control-label{
-		float: none !important;
-		width: auto !important;
-		text-align: left !important;
-	}
-	form .controls{
-		float: none !important;
-		margin-left: 0px !important;
-	}
-	form .form-actions{
-		padding-left: 0px !important;
-	}
-	.navbar,.navbar-inner{
-		margin-top: 0px !important;
-		margin-bottom: 0px !important;
-	}
-	.nav-collapse .dropdown-big .dropdown-menu{
-		color: #bbb !important;
-	}
-	.nav-collapse .dropdown-big .dropdown-menu a{
-		color: #ccc !important;
-		padding-left: 0px !important;
-		padding-right: 0px !important;
-	}
-	.nav-collapse .dropdown-big .dropdown-menu a:hover{
-		color: #aaa !important;
-	}
-	.nav-collapse .dropdown-big .dropdown-menu h5{
-		color: #eee !important;
-	}
-	.nav-collapse .dropdown-menu{
-		padding: 10px 10px !important;
-	}
-	.nav-collapse .dropdown-menu a {
-		color: #fff !important;
-	}
-	.nav-collapse .dropdown-menu a:hover{
-		background:transparent !important;
-	}
-	.nav-collapse .dropdown-menu hr{
-		border-top: 0px solid #eee;
-		border-bottom: 1px solid #333;
-	}
-	.sidebar{
-		width: 200px;
-	}
-	.mainbar{
-		margin-left: 200px;
-	}
-}
-
-
-
-
-
-
-
