--- a/app/views/catalog_sets/show.html.erb
+++ b/app/views/catalog_sets/show.html.erb
@@ -76,6 +76,7 @@
       </div>
     </div>
    <div class="clearfix"></div>
+   <%= render 'shared/footer' %>
 </div>
 
 <% if can? :manage, current_user.try(:store) %>
