--- a/app/views/catalog_parts/_catalog_part_toolbar.html.erb
+++ b/app/views/catalog_parts/_catalog_part_toolbar.html.erb
@@ -14,14 +14,12 @@
           <% end %>
         </li>
         <% end %>
-        <% if current_user.try(:store).present? %>
         <li class="ngrey">
           <a href="#addToInventory" data-toggle="modal">
-            <i class='icon icon-plus-sign'></i>Add To Store Inventory
+            <i class='icon icon-plus-sign'></i>Sell One Like This
             <span class="pull-right"><i class="icon-angle-right"></i></span>
           </a>
         </li>
-        <% end %>
         <% if user_signed_in? %>
         <li class="ngrey">
           <a href="#addToWishlist" data-toggle="modal">
