--- a/app/views/catalog_sets/_catalog_set_toolbar.html.erb
+++ b/app/views/catalog_sets/_catalog_set_toolbar.html.erb
@@ -6,6 +6,12 @@
   <div class="widget-content">
     <div class="sidebar sidebar-right">
       <ul class="navi">
+        <li class="ngrey">
+          <%= link_to inventory_catalog_set_path(@catalog_set) do %>
+            <i class='icon icon-sitemap'></i>View Set Inventory
+            <span class="pull-right"><i class="icon-angle-right"></i></span>
+          <% end %>
+        </li>
         <% if can? :edit, @catalog_set %>
         <li class="ngrey">
           <%= link_to edit_catalog_set_path(@catalog_set) do %>
@@ -14,14 +20,12 @@
           <% end %>
         </li>
         <% end %>
-        <% if current_user.try(:store).present? %>
         <li class="ngrey">
           <a href="#addToInventory" data-toggle="modal">
-            <i class='icon icon-plus-sign'></i>Add To Store Inventory
+            <i class='icon icon-plus-sign'></i>Sell One Like This
             <span class="pull-right"><i class="icon-angle-right"></i></span>
           </a>
         </li>
-        <% end %>
         <% if user_signed_in? %>
         <li class="ngrey">
           <a href="#addToWishlist" data-toggle="modal">
