--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -32,17 +32,17 @@
             <img src="img/home-3.jpg" alt="" width="100%"/>
             <div class="sidebar sidebar-right">
               <ul class="navi">
-               <li class="ngrey">
-                  <a href="#addToWishlist" data-toggle="modal">
-                    <i class='icon icon-bookmark'></i>Add To Wishlist
+                <li class="ngrey">
+                  <%= link_to catalog_index_path do %>
+                    <i class='icon icon-book'></i>Browse Catalog
                     <span class="pull-right"><i class="icon-angle-right"></i></span>
-                  </a>
+                  <% end %>
                 </li>
                 <li class="ngrey">
-                  <a href="#addToWishlist" data-toggle="modal">
-                    <i class='icon icon-bookmark'></i>Add To Wishlist
+                  <%= link_to stores_path do %>
+                    <i class='icon icon-shopping-cart'></i>Browse Stores
                     <span class="pull-right"><i class="icon-angle-right"></i></span>
-                  </a>
+                  <% end %>
                 </li>
               </ul>
             </div>
@@ -60,15 +60,15 @@
            <img src="img/home-1.jpg" alt="" width="100%"/>
             <div class="sidebar sidebar-right">
               <ul class="navi">
-               <li class="ngrey">
-                  <a href="#addToWishlist" data-toggle="modal">
-                    <i class='icon icon-bookmark'></i>Add To Wishlist
+                <li class="ngrey">
+                  <%= link_to new_store_path do %>
+                    <i class='icon icon-home'></i>Create a Store
                     <span class="pull-right"><i class="icon-angle-right"></i></span>
-                  </a>
+                  <% end %>
                 </li>
                 <li class="ngrey">
                   <a href="#addToWishlist" data-toggle="modal">
-                    <i class='icon icon-bookmark'></i>Add To Wishlist
+                    <i class='icon icon-list'></i>List an Item
                     <span class="pull-right"><i class="icon-angle-right"></i></span>
                   </a>
                 </li>
@@ -90,13 +90,13 @@
               <ul class="navi">
                <li class="ngrey">
                   <a href="#addToWishlist" data-toggle="modal">
-                    <i class='icon icon-bookmark'></i>Add To Wishlist
+                    <i class='icon icon-exchange'></i>Browse Trades
                     <span class="pull-right"><i class="icon-angle-right"></i></span>
                   </a>
                 </li>
                 <li class="ngrey">
                   <a href="#addToWishlist" data-toggle="modal">
-                    <i class='icon icon-bookmark'></i>Add To Wishlist
+                    <i class='icon icon-reorder'></i>Create a Tradelist
                     <span class="pull-right"><i class="icon-angle-right"></i></span>
                   </a>
                 </li>
