--- a/app/views/shared/_home_footer.html.erb
+++ b/app/views/shared/_home_footer.html.erb
@@ -4,17 +4,25 @@
       <div class="padd">
         <div class="sidebar sidebar-footer">
           <ul class="navi">
-           <li class="ngrey">
-              <a href="#addToWishlist" data-toggle="modal">
-                <i class='icon icon-bookmark'></i>Add To Wishlist
-                <span class="pull-right"><i class="icon-angle-right"></i></span>
-              </a>
+            <li class="ngrey">
+              <a href="#" data-toggle="modal">Add To Wishlist</a>
             </li>
             <li class="ngrey">
-              <a href="#addToWishlist" data-toggle="modal">
-                <i class='icon icon-bookmark'></i>Add To Wishlist
-                <span class="pull-right"><i class="icon-angle-right"></i></span>
-              </a>
+              <a href="#" data-toggle="modal">Add To Wishlist</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="span3">
+      <div class="padd">
+        <div class="sidebar sidebar-footer">
+          <ul class="navi">
+            <li class="ngrey">
+              <a href="#" data-toggle="modal">Add To Wishlist</a>
+            </li>
+            <li class="ngrey">
+              <a href="#" data-toggle="modal">Add To Wishlist</a>
             </li>
           </ul>
         </div>
@@ -25,16 +33,10 @@
         <div class="sidebar sidebar-footer">
           <ul class="navi">
            <li class="ngrey">
-              <a href="#addToWishlist" data-toggle="modal">
-                <i class='icon icon-bookmark'></i>Add To Wishlist
-                <span class="pull-right"><i class="icon-angle-right"></i></span>
-              </a>
+              <a href="#" data-toggle="modal">Add To Wishlist</a>
             </li>
             <li class="ngrey">
-              <a href="#addToWishlist" data-toggle="modal">
-                <i class='icon icon-bookmark'></i>Add To Wishlist
-                <span class="pull-right"><i class="icon-angle-right"></i></span>
-              </a>
+              <a href="#" data-toggle="modal">Add To Wishlist</a>
             </li>
           </ul>
         </div>
@@ -45,36 +47,10 @@
         <div class="sidebar sidebar-footer">
           <ul class="navi">
            <li class="ngrey">
-              <a href="#addToWishlist" data-toggle="modal">
-                <i class='icon icon-bookmark'></i>Add To Wishlist
-                <span class="pull-right"><i class="icon-angle-right"></i></span>
-              </a>
+              <a href="#" data-toggle="modal">Add To Wishlist</a>
             </li>
             <li class="ngrey">
-              <a href="#addToWishlist" data-toggle="modal">
-                <i class='icon icon-bookmark'></i>Add To Wishlist
-                <span class="pull-right"><i class="icon-angle-right"></i></span>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="span3">
-      <div class="padd">
-        <div class="sidebar sidebar-footer">
-          <ul class="navi">
-           <li class="ngrey">
-              <a href="#addToWishlist" data-toggle="modal">
-                <i class='icon icon-bookmark'></i>Add To Wishlist
-                <span class="pull-right"><i class="icon-angle-right"></i></span>
-              </a>
-            </li>
-            <li class="ngrey">
-              <a href="#addToWishlist" data-toggle="modal">
-                <i class='icon icon-bookmark'></i>Add To Wishlist
-                <span class="pull-right"><i class="icon-angle-right"></i></span>
-              </a>
+              <a href="#" data-toggle="modal">Add To Wishlist</a>
             </li>
           </ul>
         </div>
