--- a/app/views/stores/new.html.erb
+++ b/app/views/stores/new.html.erb
@@ -102,6 +102,8 @@
       </div>
     <% end %>
     </div>
+  </div>
+</div>
    <div class="clearfix"></div>
    <%= render 'shared/footer' %>
 </div>
