--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -10,16 +10,17 @@
       <h2 class="pull-left"><%= image_tag @store.logo.url(:medium) %>&nbsp;&nbsp;<%= @store.name %></h2>
       <div class="clearfix"></div>
     </div>
-  <div class="matter">
-    <div class="container-fluid">
-      <%= render "shared/flash" %>
-      <div class="row-fluid">
-        <div class="span12">
-          <%= @store.landing_page.to_s.html_safe %>
+    <div class="matter">
+      <div class="container-fluid">
+        <%= render "shared/flash" %>
+        <div class="row-fluid">
+          <div class="span12">
+            <%= @store.landing_page.to_s.html_safe %>
+          </div>
         </div>
       </div>
+      <div class="clearfix"></div>
     </div>
-    <div class="clearfix"></div>
   </div>
   <div class="clearfix"></div>
   <%= render 'shared/footer' %>
