--- a/app/views/catalog/index.html.erb
+++ b/app/views/catalog/index.html.erb
@@ -27,7 +27,7 @@
                         <small><%= catalog_item.name %></small>
                         <div class="clearfix"></div>
                       </div>
-                      <div class="widget-content">
+                      <div class="widget-content widget-content-fixed">
                         <%= image_tag catalog_item.image.url(:medium), :class => 'catalog-img' %>
                         <div class="clearfix"></div>
                       </div>
@@ -61,7 +61,7 @@
                         <small><%= catalog_item.name %></small>
                         <div class="clearfix"></div>
                       </div>
-                      <div class="widget-content">
+                      <div class="widget-content widget-content-fixed">
                         <%= image_tag catalog_item.image.url(:medium), :class => 'catalog-img' %>
                         <div class="clearfix"></div>
                       </div>
