--- a/app/views/catalog_sets/index.html.erb
+++ b/app/views/catalog_sets/index.html.erb
@@ -22,11 +22,11 @@
               <% row.each do |catalog_set| %>
                 <div class="span3">
                   <div class="widget wlightblue">
-                    <div class="widget-head">
-                      <h6><%= catalog_set.name %></h6>
+                    <div class="widget-head widget-head-fixed">
+                      <small><%= catalog_set.name %></small>
                       <div class="clearfix"></div>
                     </div>
-                    <div class="widget-content">
+                    <div class="widget-content widget-content-fixed">
                       <%= image_tag catalog_set.image.url(:medium), :class => 'catalog-img' %>
                       <div class="clearfix"></div>
                     </div>
