--- a/app/views/catalog_sets/show.html.erb
+++ b/app/views/catalog_sets/show.html.erb
@@ -79,57 +79,8 @@
    <%= render 'shared/footer' %>
 </div>
 
+<%= render 'catalog_sets/add_to_inventory' %>
 
-<div id="addToInventory" class="modal hide fade in" tabindex="-1" role="dialog" aria-labelledby="inventory-header" aria-hidden="false">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="inventory-header">Add Part To Store Inventory</h3>
-  </div>
-  <% if current_user.try(:store).present? %>
-    <%= form_for(@store_inventory_set, :url => add_set_to_inventory_path(current_user.store, @catalog_set)) do |f| %>
-    <div class="modal-body">
-      <div class="control-group">
-        <label class="control-label" for="quantity">Quantity</label>
-        <div class="controls">
-          <%= f.text_field :quantity, :class => "input-large" %>
-        </div>
-      </div>
-      <div class="control-group">
-        <label class="control-label" for="price">Price</label>
-        <div class="controls">
-          <%= f.text_field :price, :class => "input-large", :placeholder => "USD" %>
-        </div>
-      </div>
-      <div class="control-group">
-        <label class="control-label" for="condition">Condition</label>
-        <div class="controls">
-          <%= f.select(:condition, options_for_select(StoreInventorySet::CONDITIONS, "New (Sealed)")) %>
-        </div>
-      </div>
-      <div class="control-group">
-        <label class="control-label" for="comment">Comment</label>
-        <div class="controls">
-          <%= f.text_area :comment, :class => "input-large" %>
-        </div>
-      </div>
-    </div>
-    <div class="modal-footer">
-      <a href="#" class="btn btn-success pull-left">Advanced Form</a>
-      <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-      <button class="btn btn-primary" type="submit">Add to Inventory</button>
-    </div>
-    <% end %>
-  <% else %>
-    <div class="modal-body">
-    You must create a store to sell parts. It's quick, easy, and free.
-    </div>
-    <div class="modal-footer">
-    <%= link_to new_store_path, :class => "btn btn-success" do %>
-      <i class='icon icon-plus-sign'></i> Create a Store
-    <% end %>
-    </div>
-  <% end %>
-</div>
 
 <% if user_signed_in? %>
   <%= render 'shared/wishlist_modal', :item_id => @catalog_set.id, :item_type => @catalog_set.class.name.underscore %>
