--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,25 +1,33 @@
 <% provide(:title, "Home") %>
 <div class="content home-content">
-  <div class="home container-fluid">
+
+  <div class="home-top container-fluid">
     <div class="row-fluid">
+      <div class="span12 home-message">
+        <h1>Playmotrade is the unofficial Playmobil marketplace.</h1>
+        <h2>Creating a store is fast and free. Get started today.</h2>
+      </div>
+      <div class="span6 span6-fixed">
+        <div class="widget wlightblue">
+          <div class="widget-head">
+            <div class="pull-left">Register</div>
+            <div class="clearfix"></div>
+          </div>
+          <div class="widget-content padd">
+            <form class="form-inline">
+            <input type="text" placeholder="Email">
+            <input type="text" placeholder="Username">
+            <button type="submit" class="btn btn-primary">Create Account</button>
+            </form>
+            <div class="clearfix"></div>
+          </div>
 
-      <div class="span12">
-        <div class="widget wlightblue home-box">
-        <div class="widget-head">
-          Welcome to the Unofficial Playmobil Marketplace
-          <div class="clearfix"></div>
-         </div>
-         <div class="widget-content">
-         <div class="padd">
-         <p>Phasellus vel libero faucibus, facilisis dui eu, fermentum eros. Fusce ac arcu eu ante congue ultricies nec eu diam. Morbi tristique gravida nunc a imperdiet. Phasellus euismod eros a ultrices convallis. Donec sodales posuere lacus ac suscipit. Curabitur convallis tempus lorem nec rutrum. Nullam velit lectus, ultricies non felis eget, commodo imperdiet urna. Cras fermentum scelerisque ligula vitae pretium. Maecenas sed tellus mattis, semper purus sed, laoreet nunc. Sed a vehicula nulla, non blandit ipsum. Nunc varius tellus risus, in ultrices nulla facilisis a. Quisque id massa in erat suscipit pharetra. Fusce condimentum rhoncus nulla non bibendum.</p>
-
-         <p>Duis interdum at orci quis laoreet. Cras viverra risus ut eleifend luctus. Pellentesque posuere laoreet iaculis. Nullam nisi nisi, vehicula varius aliquet non, tincidunt nec purus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc dignissim varius erat, id iaculis erat pellentesque vel. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam dapibus dictum nunc, sit amet posuere tortor accumsan vel. Curabitur mattis auctor libero, consequat pellentesque arcu venenatis et. Aenean hendrerit sapien quis nulla posuere, et dapibus elit auctor. Quisque eu risus a tortor condimentum tincidunt.</p>
-         </div>
-          <div class="clearfix"></div>
-         </div>
         </div>
       </div>
     </div>
+  </div>
+
+  <div class="home container-fluid">
 
     <div class="row-fluid">
       <div class="span4">
