--- a/app/views/devise/_form.html.erb
+++ b/app/views/devise/_form.html.erb
@@ -13,7 +13,7 @@
 <div class="control-group">
   <label class="control-label" for="user[email]">Email</label>
   <div class="controls">
-    <%= f.email_field :email, :class => "input-large" %>
+    <%= f.email_field :email, :class => "input-large", :value => params[:email] %>
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
     <% end %>
