--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
         <!-- Widget starts -->
             <div class="widget wred">
               <div class="widget-head">
-                <i class="icon-lock"></i> Register 
+                <i class="icon-lock"></i> Register
               </div>
               <div class="widget-content">
                 <div class="padd">
@@ -20,7 +20,7 @@
                       <div class="control-group">
                         <label class="control-label" for="user[username]">Username</label>
                         <div class="controls">
-                          <%= f.text_field :username, :class => "input-large" %>
+                          <%= f.text_field :username, :class => "input-large", :value => params[:username] %>
                         </div>
                       </div>
                       <!-- Password -->
@@ -43,7 +43,7 @@
                                <%= f.check_box :agrees_to_tos %> Agree with Terms and Conditions
                             </label>
                          </div>
-                      </div> 
+                      </div>
                       <!-- Buttons -->
                       <div class="form-actions">
                          <!-- Buttons -->
@@ -51,14 +51,14 @@
                         <button type="reset" class="btn">Reset</button>
                       </div>
                     <% end %>
-                      
+
                 </div>
               </div>
                 <div class="widget-foot">
-                  Already Registered? <%= link_to('Login', new_user_session_path)  %> 
+                  Already Registered? <%= link_to('Login', new_user_session_path)  %>
                 </div>
-            </div>  
+            </div>
       </div>
     </div>
-  </div> 
+  </div>
 </div>
