almost done haml

--- a/app/views/catalog_parts/show.html.haml
+++ b/app/views/catalog_parts/show.html.haml
@@ -6,7 +6,8 @@
       %h2.pull-left Catalog
       .bread-crumb.pull-right
         = link_to root_path do
-          %i.icon-home Home
+          %i.icon-home
+          Home
         %span.divider /
         = link_to "Catalog", catalog_index_path
         %span.divider /
