--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -6,7 +6,8 @@
       %h2.pull-left Members
       .bread-crumb.pull-right
         = link_to root_path do
-          %i.icon-home Home
+          %i.icon-home
+          Home
         %span.divider /
         = link_to "Members", users_path
       .clearfix
