--- a/app/views/wishlists/index.html.haml
+++ b/app/views/wishlists/index.html.haml
@@ -6,7 +6,8 @@
       %h2.pull-left Wishlists
       .bread-crumb.pull-right
         = link_to root_path do
-          %i.icon-home Home
+          %i.icon-home
+          Home
         %span.divider /
         = link_to "Wishlists", wishlists_path
       .clearfix
