HAML complete except some devise

--- a/app/views/catalog_sets/_catalog_set_toolbar.html.haml
+++ b/app/views/catalog_sets/_catalog_set_toolbar.html.haml
@@ -15,7 +15,7 @@
           %li.ngrey
             = link_to edit_catalog_set_path(@catalog_set) do
               %i.icon-pencil
-              Edit Part
+              Edit Set
               %span.pull-right
                 %i.icon-angle-right
         %li.ngrey
