--- a/app/views/catalog_sets/edit.html.haml
+++ b/app/views/catalog_sets/edit.html.haml
@@ -1,4 +1,4 @@
-- provide(:title, "Edit Catalog Part")
+- provide(:title, "Edit Catalog Set")
 .content
   = render "shared/sidebar"
   .mainbar
@@ -11,9 +11,9 @@
         %span.divider /
         = link_to "Catalog", catalog_index_path
         %span.divider /
-        = link_to "Catalog Parts", catalog_parts_path
+        = link_to "Catalog Sets", catalog_sets_path
         %span.divider /
-        = link_to @catalog_part.number, catalog_part_path(@catalog_part)
+        = link_to @catalog_set.number, catalog_set_path(@catalog_set)
       .clearfix
     .matter
       .container-fluid
@@ -22,49 +22,59 @@
           .span3
             .widget.wlightblue
               .widget-head
-                .pull-left= @catalog_part.number.to_s
+                .pull-left= @catalog_set.number.to_s
                 .clearfix
               .widget-content
-                = image_tag @catalog_part.image.url(:large), :class => 'catalog-img'
+                = image_tag @catalog_set.image.url(:large), :class => 'catalog-img'
                 %ul.activity
                   %li
                     %strong Name:
-                    = @catalog_part.name.to_s
+                    = @catalog_set.name.to_s
                   %li
                     %strong Number:
-                    = @catalog_part.number.to_s
+                    = @catalog_set.number.to_s
                   %li
-                    %strong Category:
-                    = @catalog_part.try(:catalog_parts_category).try(:name)
+                    %strong Theme:
+                    = @catalog_set.theme.to_s
                   %li
-                    %strong Subcategory:
-                    = @catalog_part.try(:catalog_parts_subcategory).try(:name)
+                    %strong Part Count:
+                    = @catalog_set.part_count.to_s
                   %li
-                    %strong Color:
-                    = @catalog_part.color.to_s
+                    %strong Figure Count:
+                    = @catalog_set.figure_count.to_s
+                  %li
+                    %strong Release Date:
+                    = @catalog_set.release_date.to_s
+                  %li
+                    %strong Retire Date:
+                    = @catalog_set.retire_date.to_s
                   %li
                     %strong Dimensions:
-                    = @catalog_part.dimensions.to_s
+                    = @catalog_set.dimensions.to_s
                   %li
                     %strong Weight:
-                    = @catalog_part.weight.to_s
+                    = @catalog_set.weight.to_s
                   %li
                     %strong Tags:
-                    - @catalog_part.tags.each do |tag|
+                    - @catalog_set.tags.each do |tag|
                       %span.label.label-info= tag.name
           .span9
             .widget.worange
               .widget-head
-                .pull-left Edit Catalog Part
+                .pull-left Edit Catalog Set
                 .clearfix
               .widget-content
                 .padd
                   .form.quick-post
-                    = form_for @catalog_part, :html => {:class => "form-horizontal", :multipart => true} do |f|
+                    = form_for @catalog_set, :class => "form-horizontal", :multipart => true do |f|
                       .control-group
                         %label.control-label{:for => "image"} Image
                         .controls
                           = f.file_field :image
+                      .control-group
+                        %label.control-label{:for => "back_image"} Back Image
+                        .controls
+                          = f.file_field :back_image
                       .control-group
                         %label.control-label{:for => "name"} Name
                         .controls
@@ -74,17 +84,25 @@
                         .controls
                           = f.text_field :number, :class => "input-large"
                       .control-group
-                        %label.control-label{:for => "color"} Color
+                        %label.control-label{:for => "theme"} Theme
                         .controls
-                          = f.text_field :color, :class => "input-large"
+                          = f.text_field :theme, :class => "input-large"
                       .control-group
-                        %label.control-label Category
+                        %label.control-label{:for => "part_count"} Part Count
                         .controls
-                          = f.select :catalog_parts_category_id, options_for_select(CatalogPartsCategory.all.pluck(:name, :id).sort, @catalog_part.catalog_parts_category.try(:id))
+                          = f.text_field :part_count, :class => "input-large"
                       .control-group
-                        %label.control-label Subcategory
+                        %label.control-label{:for => "figure_count"} Figure Count
                         .controls
-                          = f.select :catalog_parts_subcategory_id, options_for_select(CatalogPartsSubcategory.all.pluck(:name, :id).sort, @catalog_part.catalog_parts_subcategory.try(:id))
+                          = f.text_field :figure_count, :class => "input-large"
+                      .control-group
+                        %label.control-label{:for => "release_date"} Release Date
+                        .controls
+                          = f.date_field :release_date, :class => "input-large"
+                      .control-group
+                        %label.control-label{:for => "retire_date"} Retire Date
+                        .controls
+                          = f.date_field :retire_date, :class => "input-large"
                       .control-group
                         %label.control-label{:for => "dimensions"} Dimensions
                         .controls
@@ -96,7 +114,7 @@
                       .control-group
                         %label.control-label{:for => "tags"} Tags
                         .controls
-                          = f.text_field :tags, :value => @catalog_part.tags.map(&:name).join(', '), :class => "input-large"
+                          = f.text_field :tags, :value => @catalog_set.tags.map(&:name).join(', '), :class => "input-large"
                       .form-actions
                         = f.submit "Update", class: "btn btn-success"
                   .clearfix
