BUGFIX: Catalog#index part links

--- a/app/views/catalog_sets/index.html.haml
+++ b/app/views/catalog_sets/index.html.haml
@@ -3,7 +3,7 @@
   = render 'shared/sidebar'
   .mainbar
     .page-head
-      %h2.pull-left Catalog Setss
+      %h2.pull-left Catalog Sets
       .bread-crumb.pull-right
         = link_to root_path do
           %i.icon-home
