--- a/app/views/catalog/index.html.haml
+++ b/app/views/catalog/index.html.haml
@@ -26,7 +26,7 @@
                       %small= catalog_item.name
                       .clearfix
                     .widget-content.widget-content-fixed
-                      = link_to catalog_part_path(catalog_item) do
+                      = link_to catalog_part_path(catalog_item.catalogable_id) do
                         = image_tag catalog_item.image.url(:medium), :class => 'catalog-img'
                       .clearfix
                     .widget-foot
@@ -50,7 +50,7 @@
                       %small= catalog_item.name
                       .clearfix
                     .widget-content.widget-content-fixed
-                      = link_to catalog_set_path(catalog_item) do
+                      = link_to catalog_set_path(catalog_item.catalogable_id) do
                         = image_tag catalog_item.image.url(:medium), :class => 'catalog-img'
                       .clearfix
                     .widget-foot
